--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1965,6 +1965,7 @@ footer {
   width: 100%; }
 
 .conteiner--works_blog-text {
+  background: #fff;
   text-align: center; }
 
 .conteiner--works_blog-block {
